# cryfs-gui

./: BUILD_INSTRUCTIONS  CMakeLists.txt  README.md  changelog  index.html  params.json
debian_package_info/: BUILD_INSTRUCTIONS  changelog  control
rpm/: BUILD_INSTRUCTIONS  cryfs-gui.spec
src/: checkforupdates.cpp  checkforupdates.h  cryfs-gui.cpp  cryfs-gui.h  cryfs-gui.pro  cryfs-gui.ui  cryfstask.cpp  cryfstask.h  dialogmsg.cpp  favorites.cpp  favorites.h  favorites.ui  icon.qrc  icon.qrc.depends  keydialog.cpp  keydialog.h  keydialog.ui  main.cpp  monitor_mountinfo.cpp  monitor_mountinfo.h  mountinfo.cpp  oneinstance.cpp  options.cpp  options.h  options.ui  plugin.cpp  plugin.h  readonlywarning.cpp  readonlywarning.h  secrets.h  tablewidget.cpp  tablewidget.h  task.h  utility.cpp  utility.h  volumeentryproperties.h  volumeinfo.h  walletconfig.cpp  walletconfig.h  walletconfiginput.cpp
src/lxqt_wallet/frontend/: CMakeLists.txt
translations/: en_US.ts  english_US.ts  fr_FR.qm  fr_FR.ts  translations.pro
